# Start

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG  README.md  index.html  mkdocs.yml  pip0.py  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  unittest.yaml
docs/: generated_docs.md  index.md  reference.md
reference/: index.html
search/: search_index.json
start/: __init__.py  _cli.py  cli.py  color.py  logger.py  manager.py  template.py  utils.py
start/cli/: __init__.py  environment.py  inspect.py  modify.py  params.py  project.py
start/command/: __init__.py  cli_install.py  cli_show.py  cli_start.py
start/core/: config.py  dependency.py  env_builder.py  pip_manager.py  template.py
test/: test_start.py  utils.py
tests/: base.py  test_cli.py  test_dependency.py  test_start.py  test_utils.py  utils.py
