[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "start"
version = "0.1.1"
dependencies = ["colorama", "fire", "rtoml"]

[[project.authors]]
name = "Dragon-GCS"
email = "87817321@qq.com"

[project.scripts]
start = "start:main"
[tool.setuptools]
packages = ["start"]

[tool.start]
dev-dependencies = ["autopep8"]
