[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
name = 'start'
version = '0.4.3'
dependencies = [
    'colorama',
    'fire',
    'rtoml',
]

[[project.authors]]
name = 'Dragon-GCS'
email = '87817321@qq.com'

[project.scripts]
start = 'start:main'

[project.optional-dependencies]
dev = [
    'pylint',
    'yapf',
]
[tool.setuptools]
packages = ['start']
