[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
name = 'start-manager'
version = '0.4.6'
dependencies = [
    'colorama',
    'fire',
    'rtoml',
]

[[project.authors]]
name = 'Dragon-GCS'
email = '87817321@qq.com'

[project.scripts]
start = 'start:main'

[project.optional-dependencies]
dev = [
    'flake8',
    'black',
    'isort',
]
[tool.setuptools]
packages = ['start']
